--- a/emptyHTMLTemplate.html
+++ b/emptyHTMLTemplate.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="script.css">
-    <title>Document</title>
+    <title>Empty</title>
 </head>
 <body>
-    
+    <h1>Hello</h1>
 </body>
 </html>
